Updating logic to convert XML to JSON and calling API to show description

--- a/public/home.html
+++ b/public/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Travelix</title>
+<title>Board Game Picker</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Travelix Project">
@@ -77,7 +77,7 @@
 				<div class="row">
 					<div class="col main_nav_col d-flex flex-row align-items-center justify-content-start">
 						<div class="logo_container">
-							<div class="logo"><a href="#"><img src="images/logo.png" alt="">Travel Explorer</a></div>
+							<div class="logo"><a href="#"><img src="images/logo.png" alt="">Board Game Picker</a></div>
 						</div>
 						<div class="main_nav_container ml-auto">
 							<ul class="main_nav_list">
@@ -118,7 +118,7 @@
 					<div class="home_slider_content text-center">
 						<div class="home_slider_content_inner" data-animation-in="flipInX" data-animation-out="animate-out fadeOut">
 							<h1>discover</h1>
-							<h1>the world</h1>
+							<h1>the fun</h1>
 							<!--<div class="button home_slider_button"><div class="button_bcg"></div><a href="#">explore now<span></span><span></span><span></span></a></div>-->
 						</div>
 					</div>
@@ -172,7 +172,7 @@
 				<tr>
 					<th style="color: black">Game Details</th>
 				</tr>
-				<tr ng-repeat="x in fullDocument">
+				<tr ng-repeat="x in document">
 					<td style="color: black">{{x}}</td>
 				</tr>
 			</table>
